# StreamFlix-PS-Vita-Port

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
src/: main.h
src/db/: database.c  database.h
src/net/: http_client.h  json_helpers.c
src/providers/: superstream.h
src/ui/: font_pgf.h  ui_common.h
vita/: CMakeLists.txt
vita/src/: main.c  main.h
vita/src/net/: http_client.c  json_helpers.h  ss_crypto.c  ss_crypto.h  zstd_stub.c
vita/src/providers/: superstream.c
vita/src/ui/: font_pgf.c  ui_common.c  ui_detail.c  ui_main_menu.c  ui_player.c  ui_search.c
vita/tools/: patch_relocs.c
